--- a/src/pages/CreateHoroscope/style.module.css
+++ b/src/pages/CreateHoroscope/style.module.css
@@ -3,6 +3,7 @@
   flex-direction: column;
   text-align: left;
   width: 100%;
+  height: 100%;
 }
 
 .horoscopeText {
